[package]
name = "realword-warp"
version = "0.1.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/balajisivaraman/realword-warp"
authors = ["Balaji Sivaraman <balaji@balajisivaraman.com>"]

[dependencies]
warp = "0.1.0"
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = "1.0.70"
serde_derive = "1.0"
serde_struct_wrapper = "0.3"
djangohashers = "0.3"
frank_jwt = "3.0"
time = "0.1"
uuid = { version = "0.6", features = ["v5"] }
